page connexion/inscription

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@ p{
 }
 .hero-scene{
     position: relative;
+    margin-bottom: 15px;
     &::before{
         content:"";
         position: absolute;
@@ -73,4 +74,7 @@ p{
         opacity: 0;
         transition: all 0.3s;
     }
+}
+.form-label{
+    color: $primary;
 }
